--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  async_builder: ^1.3.1+1
+  dart_ping: ^9.0.1
 
 dev_dependencies:
   flutter_test:
